--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
+    "passport-oauth2-refresh": "^2.0.0",
     "popper.js": "^1.16.0",
     "request": "^2.88.0",
     "stripe": "^8.4.1",
