--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
+    "bootstrap-notify": "^3.1.3",
     "cheerio": "^1.0.0-rc.3",
     "compression": "^1.7.4",
     "connect-mongo": "^3.2.0",
