--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@octokit/rest": "^16.38.1",
     "axios": "^0.19.2",
     "bcrypt": "^3.0.7",
+    "blueimp-file-upload": "^10.30.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "bootstrap-notify": "^3.1.3",
