--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cheerio": "^1.0.0-rc.3",
     "compression": "^1.7.4",
     "connect-mongo": "^3.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "errorhandler": "^1.5.1",
