--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 BASE_URL=http://localhost:8080
-MONGODB_URI=mongodb://localhost:27017/tizen
+LOCAL_MONGODB_URI=mongodb://localhost:27017/tizen
+MONGODB_URI=mongodb://pkbotuser:impkbotnewuser77@ds111535.mlab.com:11535/chatbot_data
 
 SESSION_SECRET=F@l^U*F!f&Y
 
