--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,6 @@
     "no-unused-expressions": 0,
     "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
     "chai-friendly/no-unused-expressions": 2,
-    "linebreak-style": ["error", "unix"]
+    "linebreak-style": ["error", "windows"]
   }
 }
