--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@ladjs/bootstrap-social": "^7.0.2",
     "@octokit/rest": "^16.38.1",
+    "agenda": "^3.1.0",
     "axios": "^0.19.2",
     "bcrypt": "^3.0.7",
     "blueimp-file-upload": "^10.30.1",
