--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "node-sass": "^4.13.0",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.4.2",
+    "object-hash": "^2.0.3",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
